# apriltag

./: CMakeLists.txt  _CMakeLists.txt  apriltag.c  apriltag.h  apriltag_pose.h  debian.cmake  junk.h
common/: g2d.c  matd.c  pthreads_cross.cpp  workerpool.c
example/: CMakeLists.txt
libs/: CMakeLists.txt
libs/CMake/: apriltagHelperFunctions.cmake
libs/apriltag/: CMakeLists.txt
libs/apriltag/CMake/: apriltagHelperFunctions.cmake
libs/apriltag/include/apriltag/: apriltag.h
libs/apriltag/src/: apriltag.c  apriltag_pose.c
libs/apriltag/src/common/: image_u8.c  pthreads_cross.cpp
libs/apriltag_python/: CMakeLists.txt
libs/src/: apriltag.c
test/: CMakeLists.txt  go.sh  hello.cpp  out.pnm
